[gd_scene load_steps=59 format=3 uid="uid://61n1uamls8ge"]

[ext_resource type="Script" path="res://source/helpers/autoloads/audio_manager/audio_manager.gd" id="1_os1f8"]
[ext_resource type="AudioStream" uid="uid://hfu7dixclclj" path="res://assets/sfx/ui/Impact_Flesh_001.ogg" id="2_cdfvx"]
[ext_resource type="AudioStream" uid="uid://r1kh5xp24fdc" path="res://assets/sfx/ui/Impact_Flesh_002.ogg" id="3_gvhxc"]
[ext_resource type="AudioStream" uid="uid://chcyejai6rnpu" path="res://assets/sfx/ui/Impact_Flesh_003.ogg" id="4_edrx0"]
[ext_resource type="AudioStream" uid="uid://ck8t6ic2al8xd" path="res://assets/sfx/ui/Impact_Flesh_004.ogg" id="5_oidgy"]
[ext_resource type="AudioStream" uid="uid://1db5h5ihx3j4" path="res://assets/sfx/ui/Impact_Flesh_005.ogg" id="6_mrcwf"]
[ext_resource type="AudioStream" uid="uid://bnpuh5j1y6sdc" path="res://assets/sfx/ui/Impact_Flesh_006.ogg" id="7_5q6or"]
[ext_resource type="AudioStream" uid="uid://wssgcwedk6n3" path="res://assets/sfx/ui/Impact_Flesh_007.ogg" id="8_246wp"]
[ext_resource type="AudioStream" uid="uid://bnm6gl8s08lx5" path="res://assets/sfx/ui/Impact_Flesh_008.ogg" id="9_bmdib"]
[ext_resource type="AudioStream" uid="uid://csyj5w2fceo4f" path="res://assets/sfx/footsteps/carpet/Footstep Carpet Walking 1_01.wav" id="10_ojryj"]
[ext_resource type="AudioStream" uid="uid://dapyp468sv2e7" path="res://assets/sfx/footsteps/carpet/Footstep Carpet Walking 1_02.wav" id="11_er07u"]
[ext_resource type="AudioStream" uid="uid://vm4mdqxepxua" path="res://assets/sfx/footsteps/carpet/Footstep Carpet Walking 1_03.wav" id="12_sv2m3"]
[ext_resource type="AudioStream" uid="uid://dw6xxlf66uurs" path="res://assets/sfx/footsteps/carpet/Footstep Carpet Walking 1_04.wav" id="13_ukjfn"]
[ext_resource type="AudioStream" uid="uid://wtie6u683hfm" path="res://assets/sfx/footsteps/carpet/Footstep Carpet Walking 1_05.wav" id="14_vya6e"]
[ext_resource type="AudioStream" uid="uid://bw662ba1w0lxb" path="res://assets/sfx/footsteps/carpet/Footstep Carpet Walking 1_06.wav" id="15_p1bnn"]
[ext_resource type="AudioStream" uid="uid://c8nn61akh6qud" path="res://assets/sfx/footsteps/carpet/Footstep Carpet Walking 1_07.wav" id="16_u6iyg"]
[ext_resource type="AudioStream" uid="uid://k4qtku00pu5e" path="res://assets/sfx/footsteps/carpet/Footstep Carpet Walking 1_08.wav" id="17_inomm"]
[ext_resource type="AudioStream" uid="uid://ckc8parg1jptj" path="res://assets/sfx/footsteps/carpet/Footstep Carpet Walking 1_09.wav" id="18_gehh3"]
[ext_resource type="AudioStream" uid="uid://eb1rjgviua5b" path="res://assets/sfx/footsteps/carpet/Footstep Carpet Walking 1_10.wav" id="19_g03i2"]
[ext_resource type="AudioStream" uid="uid://e5qag2bur0ey" path="res://assets/sfx/footsteps/wood/Footstep Wood Walking 1_01.wav" id="20_npakm"]
[ext_resource type="AudioStream" uid="uid://clo7drd81vqkw" path="res://assets/sfx/footsteps/wood/Footstep Wood Walking 1_02.wav" id="21_kb437"]
[ext_resource type="AudioStream" uid="uid://b4255qeu71oab" path="res://assets/sfx/footsteps/wood/Footstep Wood Walking 1_03.wav" id="22_kfo8x"]
[ext_resource type="AudioStream" uid="uid://bv34ctyb3xd01" path="res://assets/sfx/footsteps/wood/Footstep Wood Walking 1_04.wav" id="23_pbnte"]
[ext_resource type="AudioStream" uid="uid://cbxooirhof66y" path="res://assets/sfx/footsteps/wood/Footstep Wood Walking 1_05.wav" id="24_qqnhn"]
[ext_resource type="AudioStream" uid="uid://bn80mde6rpx2v" path="res://assets/sfx/footsteps/wood/Footstep Wood Walking 1_06.wav" id="25_s7a6k"]
[ext_resource type="AudioStream" uid="uid://cqs0ks2x4ypis" path="res://assets/sfx/footsteps/wood/Footstep Wood Walking 1_07.wav" id="26_04iwd"]
[ext_resource type="AudioStream" uid="uid://b6gltuljwos4k" path="res://assets/sfx/footsteps/wood/Footstep Wood Walking 1_08.wav" id="27_s5daa"]
[ext_resource type="AudioStream" uid="uid://dbgkebmk1hxdm" path="res://assets/sfx/footsteps/wood/Footstep Wood Walking 1_09.wav" id="28_26kfu"]
[ext_resource type="AudioStream" uid="uid://bjv87o7tnwuqp" path="res://assets/sfx/footsteps/wood/Footstep Wood Walking 1_10.wav" id="29_7lip0"]
[ext_resource type="AudioStream" uid="uid://chtdnkl658uec" path="res://assets/sfx/footsteps/tiles/Footstep Concrete Walking 1_01.wav" id="30_8npqg"]
[ext_resource type="AudioStream" uid="uid://dsumdj67cubk7" path="res://assets/sfx/footsteps/tiles/Footstep Concrete Walking 1_02.wav" id="31_xpkvo"]
[ext_resource type="AudioStream" uid="uid://d0om16u0bcu3a" path="res://assets/sfx/footsteps/tiles/Footstep Concrete Walking 1_03.wav" id="32_aat1l"]
[ext_resource type="AudioStream" uid="uid://cfhm71ei83eot" path="res://assets/sfx/footsteps/tiles/Footstep Concrete Walking 1_04.wav" id="33_5eg23"]
[ext_resource type="AudioStream" uid="uid://d2f7jlmcftsq8" path="res://assets/sfx/footsteps/tiles/Footstep Concrete Walking 1_05.wav" id="34_krcqe"]
[ext_resource type="AudioStream" uid="uid://0idjr1bf313w" path="res://assets/sfx/footsteps/tiles/Footstep Concrete Walking 1_06.wav" id="35_e2m2t"]
[ext_resource type="AudioStream" uid="uid://3rtnnhft2pfh" path="res://assets/sfx/footsteps/tiles/Footstep Concrete Walking 1_07.wav" id="36_lsjws"]
[ext_resource type="AudioStream" uid="uid://db85xsfp00opb" path="res://assets/sfx/footsteps/tiles/Footstep Concrete Walking 1_08.wav" id="37_hognd"]
[ext_resource type="AudioStream" uid="uid://xe0c2m31wg3f" path="res://assets/sfx/footsteps/tiles/Footstep Concrete Walking 1_09.wav" id="38_5fmpl"]
[ext_resource type="AudioStream" uid="uid://diik5oe6v3070" path="res://assets/sfx/footsteps/tiles/Footstep Concrete Walking 1_10.wav" id="39_2x2n0"]
[ext_resource type="AudioStream" uid="uid://c1xrs5tk4voc6" path="res://assets/music/Morning_Coffee_Game.ogg" id="40_x8mfy"]
[ext_resource type="AudioStream" uid="uid://difmxx50wou7s" path="res://assets/music/Morning_Coffee_Game_2.ogg" id="41_0u1pg"]
[ext_resource type="AudioStream" uid="uid://cnrkhvi4dsobu" path="res://assets/music/Morning_Coffee_Menu.ogg" id="41_75clh"]
[ext_resource type="AudioStream" uid="uid://doer7in28yhc" path="res://assets/music/Morning_Coffee_Game_3.ogg" id="42_7irhr"]
[ext_resource type="AudioStream" uid="uid://3xt5h6juuktr" path="res://assets/sfx/VA/morning_1.ogg" id="42_o31wl"]
[ext_resource type="AudioStream" uid="uid://dsox4af0fxamq" path="res://assets/sfx/VA/morning_2.ogg" id="43_2gm1r"]
[ext_resource type="AudioStream" uid="uid://l0vyl6abtdm3" path="res://assets/music/Morning_Coffee_Game_4_Loop.ogg" id="43_5qgun"]
[ext_resource type="AudioStream" uid="uid://c7q1v8amoq107" path="res://assets/sfx/VA/morning_3.ogg" id="44_tw8bf"]
[ext_resource type="AudioStream" uid="uid://fxp4edm8bjbm" path="res://assets/sfx/VA/morning_4.ogg" id="45_u5dej"]
[ext_resource type="AudioStream" uid="uid://ddttts18u1upq" path="res://assets/sfx/VA/confused.ogg" id="46_2m3lx"]
[ext_resource type="AudioStream" uid="uid://b65mggto1khne" path="res://assets/sfx/VA/after_shower.ogg" id="47_qv0aw"]
[ext_resource type="AudioStream" uid="uid://b2oeekdkghb3a" path="res://assets/sfx/VA/acceptance.ogg" id="48_i4q75"]
[ext_resource type="AudioStream" uid="uid://b227gv1dh0aps" path="res://assets/sfx/VA/drink_coffee.ogg" id="49_wijpb"]
[ext_resource type="AudioStream" uid="uid://cgh06w6m1t3k0" path="res://assets/sfx/VA/empty_BONES.ogg" id="50_eyvcw"]
[ext_resource type="AudioStream" uid="uid://c5qelc45jq7uf" path="res://assets/sfx/VA/dont_leave.ogg" id="51_07mke"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_q0bge"]
streams_count = 10
stream_0/stream = ExtResource("10_ojryj")
stream_0/weight = 1.0
stream_1/stream = ExtResource("11_er07u")
stream_1/weight = 1.0
stream_2/stream = ExtResource("12_sv2m3")
stream_2/weight = 1.0
stream_3/stream = ExtResource("13_ukjfn")
stream_3/weight = 1.0
stream_4/stream = ExtResource("14_vya6e")
stream_4/weight = 1.0
stream_5/stream = ExtResource("15_p1bnn")
stream_5/weight = 1.0
stream_6/stream = ExtResource("16_u6iyg")
stream_6/weight = 1.0
stream_7/stream = ExtResource("17_inomm")
stream_7/weight = 1.0
stream_8/stream = ExtResource("18_gehh3")
stream_8/weight = 1.0
stream_9/stream = ExtResource("19_g03i2")
stream_9/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_g471q"]
streams_count = 10
stream_0/stream = ExtResource("20_npakm")
stream_0/weight = 1.0
stream_1/stream = ExtResource("21_kb437")
stream_1/weight = 1.0
stream_2/stream = ExtResource("22_kfo8x")
stream_2/weight = 1.0
stream_3/stream = ExtResource("23_pbnte")
stream_3/weight = 1.0
stream_4/stream = ExtResource("24_qqnhn")
stream_4/weight = 1.0
stream_5/stream = ExtResource("25_s7a6k")
stream_5/weight = 1.0
stream_6/stream = ExtResource("26_04iwd")
stream_6/weight = 1.0
stream_7/stream = ExtResource("27_s5daa")
stream_7/weight = 1.0
stream_8/stream = ExtResource("28_26kfu")
stream_8/weight = 1.0
stream_9/stream = ExtResource("29_7lip0")
stream_9/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ag1mm"]
streams_count = 10
stream_0/stream = ExtResource("30_8npqg")
stream_0/weight = 1.0
stream_1/stream = ExtResource("31_xpkvo")
stream_1/weight = 1.0
stream_2/stream = ExtResource("32_aat1l")
stream_2/weight = 1.0
stream_3/stream = ExtResource("33_5eg23")
stream_3/weight = 1.0
stream_4/stream = ExtResource("34_krcqe")
stream_4/weight = 1.0
stream_5/stream = ExtResource("35_e2m2t")
stream_5/weight = 1.0
stream_6/stream = ExtResource("36_lsjws")
stream_6/weight = 1.0
stream_7/stream = ExtResource("37_hognd")
stream_7/weight = 1.0
stream_8/stream = ExtResource("38_5fmpl")
stream_8/weight = 1.0
stream_9/stream = ExtResource("39_2x2n0")
stream_9/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_giuuh"]
streams_count = 8
stream_0/stream = ExtResource("2_cdfvx")
stream_0/weight = 1.0
stream_1/stream = ExtResource("3_gvhxc")
stream_1/weight = 1.0
stream_2/stream = ExtResource("4_edrx0")
stream_2/weight = 1.0
stream_3/stream = ExtResource("5_oidgy")
stream_3/weight = 1.0
stream_4/stream = ExtResource("6_mrcwf")
stream_4/weight = 1.0
stream_5/stream = ExtResource("7_5q6or")
stream_5/weight = 1.0
stream_6/stream = ExtResource("8_246wp")
stream_6/weight = 1.0
stream_7/stream = ExtResource("9_bmdib")
stream_7/weight = 1.0

[node name="AudioManager" type="Node"]
script = ExtResource("1_os1f8")

[node name="Footsteps" type="Node" parent="."]

[node name="footstep_carpet" type="AudioStreamPlayer" parent="Footsteps" groups=["audio"]]
stream = SubResource("AudioStreamRandomizer_q0bge")
bus = &"Effects"

[node name="footstep_wood" type="AudioStreamPlayer" parent="Footsteps" groups=["audio"]]
stream = SubResource("AudioStreamRandomizer_g471q")
bus = &"Effects"

[node name="footstep_tile" type="AudioStreamPlayer" parent="Footsteps" groups=["audio"]]
stream = SubResource("AudioStreamRandomizer_ag1mm")
bus = &"Effects"

[node name="footstep_dirt" type="AudioStreamPlayer" parent="Footsteps" groups=["audio"]]
stream = SubResource("AudioStreamRandomizer_ag1mm")
bus = &"Effects"

[node name="NonSpatialEffects" type="Node" parent="."]

[node name="ui_click" type="AudioStreamPlayer" parent="NonSpatialEffects" groups=["audio"]]
stream = SubResource("AudioStreamRandomizer_giuuh")
bus = &"Effects"

[node name="Music" type="Node" parent="."]

[node name="day1_music" type="AudioStreamPlayer" parent="Music" groups=["audio"]]
stream = ExtResource("40_x8mfy")
volume_db = 10.0
bus = &"Music"

[node name="day2_music" type="AudioStreamPlayer" parent="Music" groups=["audio"]]
stream = ExtResource("41_0u1pg")
volume_db = 10.0
bus = &"Music"

[node name="day3_music" type="AudioStreamPlayer" parent="Music" groups=["audio"]]
stream = ExtResource("42_7irhr")
volume_db = 10.0
bus = &"Music"

[node name="day4_music" type="AudioStreamPlayer" parent="Music" groups=["audio"]]
stream = ExtResource("43_5qgun")
volume_db = 10.0
bus = &"Music"

[node name="menu_music" type="AudioStreamPlayer" parent="Music" groups=["audio"]]
stream = ExtResource("41_75clh")
volume_db = -10.0
autoplay = true
bus = &"Music"

[node name="Voice" type="Node" parent="."]

[node name="morning_1" type="AudioStreamPlayer" parent="Voice" groups=["audio"]]
stream = ExtResource("42_o31wl")
bus = &"Voices"

[node name="morning_2" type="AudioStreamPlayer" parent="Voice" groups=["audio"]]
stream = ExtResource("43_2gm1r")
bus = &"Voices"

[node name="morning_3" type="AudioStreamPlayer" parent="Voice" groups=["audio"]]
stream = ExtResource("44_tw8bf")
bus = &"Voices"

[node name="morning_4" type="AudioStreamPlayer" parent="Voice" groups=["audio"]]
stream = ExtResource("45_u5dej")
bus = &"Voices"

[node name="confused" type="AudioStreamPlayer" parent="Voice" groups=["audio"]]
stream = ExtResource("46_2m3lx")
bus = &"Voices"

[node name="after_shower" type="AudioStreamPlayer" parent="Voice" groups=["audio"]]
stream = ExtResource("47_qv0aw")
bus = &"Voices"

[node name="acceptance" type="AudioStreamPlayer" parent="Voice" groups=["audio"]]
stream = ExtResource("48_i4q75")
bus = &"Voices"

[node name="drink_coffee" type="AudioStreamPlayer" parent="Voice" groups=["audio"]]
stream = ExtResource("49_wijpb")
bus = &"Voices"

[node name="empty_BONES" type="AudioStreamPlayer" parent="Voice" groups=["audio"]]
stream = ExtResource("50_eyvcw")
bus = &"Voices"

[node name="dont_leave" type="AudioStreamPlayer" parent="Voice" groups=["audio"]]
stream = ExtResource("51_07mke")
bus = &"Voices"

[node name="SubtitleLayer" type="CanvasLayer" parent="."]
layer = 5
follow_viewport_enabled = true

[node name="MarginContainer" type="MarginContainer" parent="SubtitleLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="Subtitles" type="RichTextLabel" parent="SubtitleLayer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
bbcode_enabled = true
text = "[center]Test subtitle"
fit_content = true
scroll_active = false
